force-app/main/default/objects/PO_Shipment__c/PO_Shipment__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Shipment</label>
    <nameField>
        <displayFormat>PO_SP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>