force-app/main/default/objects/PO_Shipment__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Shipping Comment</label>
    <type>TextArea</type>
</CustomField>