force-app/main/default/objects/PO_Shipment__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Shipping Date</label>
    <type>Date</type>
</CustomField>