force-app/main/default/objects/PO_Shipment__c/fields/GL_Account_Variable_1__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account Variable 1</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>