force-app/main/default/objects/PO_Shipment__c/fields/Packing_Slip_Format__c.field-meta.xml
<CustomField>
    <fullName>Packing_Slip_Format__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Packing Slip Format</label>
    <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>