force-app/main/default/objects/PO_Shipment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipName>POShipments</relationshipName>
    <type>Lookup</type>
</CustomField>