force-app/main/default/objects/PO_Shipment__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Shipment Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>