force-app/main/default/objects/PO_Shipment__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>AcctSeedERP__Shipment__c</referenceTo>
    <relationshipLabel>Purchase Order Shipments</relationshipLabel>
    <relationshipName>Purchase_Order_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>