force-app/main/default/objects/PO_Shipment__c/fields/Shipment_ETA__c.field-meta.xml
<CustomField>
    <fullName>Shipment_ETA__c</fullName>
    <label>Shipment ETA</label>
    <type>Date</type>
</CustomField>