force-app/main/default/objects/PO_Shipment__c/validationRules/Sales_Order_should_be_the_same_as_on_PO.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Order_should_be_the_same_as_on_PO</fullName>
    <active>true</active>
    <description>Selected Sales order should be the same as on the related Purchase order.</description>
    <errorConditionFormula>IF( !ISBLANK(Sales_Order__c) &amp;&amp; Sales_Order__c !=  Purchase_Order__r.Sales_Order__c, True, False)</errorConditionFormula>
    <errorMessage>Selected Sales order should be the same as on the related Purchase order.</errorMessage>
</ValidationRule>